--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,19 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="signin">Sign In</string>
+    <string name="signup">Sign Up</string>
+    <string name="loginURL">http://aadb3af9.ngrok.io/login</string>
+    <string name="noAccountYet">No account yet? Create one</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+    <string name="logout">Logout</string>
+    <string name="menu1">View Current Location</string>
+    <string name="menu2">View Arrival Times</string>
+    <string name="menu3">View Train Schedule</string>
+    <string name="share">Share My Location</string>
+    <string name="createAccount">Create</string>
+    <string name="viewTrainSchedule">View Schedule</string>
+    <string name="currentLocation">Current Location</string>
+    <string name="expectedTimes">Expected Times</string>
 </resources>
