--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="settings">Settings</string>
     <string name="help">Help</string>
     <string name="logout">Logout</string>
-    <string name="menu1">View Current Location</string>
+    <string name="menu1">History</string>
     <string name="menu2">View Arrival Times</string>
     <string name="menu3">View Train Schedule</string>
     <string name="share">Share My Location</string>
